Hide duplicate action in visitor log by default
and extend them on click

--- a/plugins/Live/stylesheets/live.less
+++ b/plugins/Live/stylesheets/live.less
@@ -113,6 +113,13 @@ ol.visitorLog > li {
     vertical-align: top;
   }
 
+  &.duplicate {
+    visibility: hidden;
+    height: 0;
+    margin: 0;
+    overflow: hidden;
+  }
+
   &.more {
       list-style-type: none;
       font-weight: bold;
